Migration to JDK Vector API and JDK 19.